# windows-rs

crates/libs/bindgen/src/: metadata.rs
crates/libs/bindgen/src/rust/: winrt_methods.rs
crates/libs/core/src/: borrow.rs  lib.rs  param.rs
crates/libs/interface/: Cargo.toml
crates/libs/interface/src/: lib.rs
crates/samples/components/json_validator_winrt/src/: lib.rs
crates/tests/interface_core/tests/: borrow.rs
crates/tests/noexcept/: Cargo.toml
crates/tests/noexcept/src/: bindings.rs  lib.rs  test.idl
