[package]
name = "test_noexcept"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.windows]
path = "../../libs/windows"
features = [
    "Foundation",
    "Win32_System_WinRT",
]

[dependencies.windows-core]
path = "../../libs/core"

[build-dependencies.windows-bindgen]
path = "../../libs/bindgen"
